  as usual. If you want the remove a given name just enter an empty text
  Problems are treated the same way. They don't need to have a name.

- huge speed improvement for the assembling of puzzles with many identical
  pieces. The time for JayCube, for example, dropped on my machine from
  2.5 hours to 7 minutes. The disadvantage is that you can not continue
  old saved puzzles.

------------- Version 0.1.8b

- Fix Bug found by Markus Götz that made the program crash, when all 
  piece were cubes

- Fix a bug found by Primitivo Familiar Ramos. The problem- slider on 
  the solve tab didn't work

- also implement some suggestions by Primitivo: start counting from 1,
  unify tool tips, fix some spelling errors

- empty status bar when activating solve tab, as the information got 
  stale (found by Peter Knoppers)

------------- Version 0.1.8a Nov 13 2005

- when the program crashes it tries to show some information and it also
  tries to save the current puzzle into __rescue.xmpuzzle. Please follow 
  the instructions in this window and send me the information.

- when reducing show the piece that is worked on to show that something
  is going on

- Placement browser lets you see at what positions a certain piece fits
  into the resulting shape. Attention, read the documentation about this

- Documentation updates. Some of the internals are described. I was also
  able to bundle some puzzle designs with the program so that you
  have something to play with right after installing the program.
  Many thanks to the designers for allowing me to include their designs.

- Suppression of rotated and mirrored solutions. The program now
  wont find rotated and mirrored solutions any longer (at leat I hope
  that it does

- configuration file. The position of the window is saved, you can also
  toggle tooltips and switch off the light in 3D view resulting in a
  completely even and very light colors for the pieces
